--- a/mailer/package.json
+++ b/mailer/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.2",
     "helmet": "^5.0.0",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.2.0"
+    "node-fetch": "^3.2.0",
+    "puppeteer": "^19.7.1"
   }
 }
