--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .env
+.gitignore
 mailer/node_modules/
 mailer/.bash_history
 mailer/.viminfo
+mailer/.cache
+mailer/.npm
 mailer/redesagi_facturacion_bk.sql
